--- a/mobile/abigiya_getachew/clean_app/pubspec.yaml
+++ b/mobile/abigiya_getachew/clean_app/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   shared_preferences: ^2.3.1
   build_runner: ^2.4.11
   image_picker: 
+  uuid: ^4.4.2
 
 dev_dependencies:
   flutter_test:
