--- a/mobile/abigiya_getachew/clean_app/pubspec.yaml
+++ b/mobile/abigiya_getachew/clean_app/pubspec.yaml
@@ -78,7 +78,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - image/ornate_cross.jpg
+    - image/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -98,6 +98,7 @@ flutter:
         - asset: assets/fonts/Poppins-Regular.ttf
         - asset: assets/fonts/Poppins-Bold.ttf
           weight: 700
+          
 
     - family: CaveatBrush
       fonts:
